优化部分数据存入 sqlite
