# api-docs/openapi/v3_0/doubanApi.json
@@ -2,10 +2,10 @@
   "openapi" : "3.0.1",
   "info" : {
     "title" : "Halo",
-    "version" : "2.22.0-alpha.1"
+    "version" : "2.22.8"
   },
   "servers" : [ {
-    "url" : "http://localhost:55075",
+    "url" : "http://localhost:36479",
     "description" : "Generated server url"
   } ],
   "security" : [ {
@@ -16,7 +16,7 @@
     "/apis/api.douban.moony.la/v1alpha1/doubanmovies" : {
       "get" : {
         "description" : "List doubanMovie.",
-        "operationId" : "listDoubanMovie_1",
+        "operationId" : "QueryDoubanMovie",
         "parameters" : [ {
           "description" : "Page number. Default is 0.",
           "in" : "query",
@@ -107,7 +107,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/DoubanMovieList"
+                  "$ref" : "#/components/schemas/DoubanMovieDataList"
                 }
               }
             },
@@ -120,7 +120,7 @@
     "/apis/api.douban.moony.la/v1alpha1/doubanmovies/-/genres" : {
       "get" : {
         "description" : "List all douban genres.",
-        "operationId" : "ListGenres",
+        "operationId" : "QueryGenres",
         "parameters" : [ {
           "description" : "Genres type to query",
           "in" : "query",
@@ -161,7 +161,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/DoubanMovieVo"
+                  "$ref" : "#/components/schemas/DoubanMovieData"
                 }
               }
             },
@@ -169,6 +169,264 @@
           }
         },
         "tags" : [ "api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      }
+    },
+    "/apis/api.douban.moony.la/v1alpha1/doubanmovies/-/types" : {
+      "get" : {
+        "description" : "List all douban types.",
+        "operationId" : "QueryTypes",
+        "responses" : {
+          "default" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/DoubanTypeVo"
+                  }
+                }
+              }
+            },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      }
+    },
+    "/apis/console.api.douban.moony.la/v1alpha1/doubanmovies" : {
+      "get" : {
+        "description" : "分页查询豆瓣条目",
+        "operationId" : "ListDoubanMovies",
+        "parameters" : [ {
+          "description" : "Page number. Default is 0.",
+          "in" : "query",
+          "name" : "page",
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }, {
+          "description" : "Size number. Default is 0.",
+          "in" : "query",
+          "name" : "size",
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }, {
+          "description" : "Label selector. e.g.: hidden!=true",
+          "in" : "query",
+          "name" : "labelSelector",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }, {
+          "description" : "Field selector. e.g.: metadata.name==halo",
+          "in" : "query",
+          "name" : "fieldSelector",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }, {
+          "description" : "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.",
+          "in" : "query",
+          "name" : "sort",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }, {
+          "description" : "DoubanMovies filtered by keyword.",
+          "in" : "query",
+          "name" : "keyword",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "description" : "DoubanMovies filtered by status.",
+          "in" : "query",
+          "name" : "status",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "description" : "DoubanMovies filtered by type.",
+          "in" : "query",
+          "name" : "type",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "description" : "DoubanMovies filtered by dataType.",
+          "in" : "query",
+          "name" : "dataType",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "description" : "DoubanMovies filtered by genre.",
+          "in" : "query",
+          "name" : "genre",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/DoubanMovieListResponse"
+                }
+              }
+            },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      },
+      "post" : {
+        "description" : "创建豆瓣条目",
+        "operationId" : "CreateDoubanMovie",
+        "requestBody" : {
+          "content" : {
+            "*/*" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/DoubanMovieData"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "default" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/DoubanMovieData"
+                }
+              }
+            },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      }
+    },
+    "/apis/console.api.douban.moony.la/v1alpha1/doubanmovies/-/clear" : {
+      "delete" : {
+        "description" : "清空全部豆瓣条目",
+        "operationId" : "ClearDoubanMovies",
+        "responses" : {
+          "default" : {
+            "content" : { },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      }
+    },
+    "/apis/console.api.douban.moony.la/v1alpha1/doubanmovies/-/synchronizationDouban" : {
+      "post" : {
+        "description" : "同步豆瓣数据",
+        "operationId" : "SynchronizationDouban",
+        "responses" : {
+          "default" : {
+            "content" : { },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      }
+    },
+    "/apis/console.api.douban.moony.la/v1alpha1/doubanmovies/{id}" : {
+      "delete" : {
+        "description" : "删除豆瓣条目",
+        "operationId" : "DeleteDoubanMovie",
+        "parameters" : [ {
+          "in" : "path",
+          "name" : "id",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "content" : { },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      },
+      "get" : {
+        "description" : "获取豆瓣条目",
+        "operationId" : "GetDoubanMovie",
+        "parameters" : [ {
+          "in" : "path",
+          "name" : "id",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/DoubanMovieData"
+                }
+              }
+            },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
+      },
+      "put" : {
+        "description" : "更新豆瓣条目",
+        "operationId" : "UpdateDoubanMovie",
+        "parameters" : [ {
+          "in" : "path",
+          "name" : "id",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "*/*" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/DoubanMovieData"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "default" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/DoubanMovieData"
+                }
+              }
+            },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.douban.moony.la/v1alpha1/DoubanMovie" ]
       }
     },
     "/apis/douban.moony.la/v1alpha1/crondoubans" : {
@@ -726,8 +984,118 @@
           "spec" : {
             "$ref" : "#/components/schemas/DoubanMovieSpec"
           }
-        },
-        "description" : "A chunk of items."
+        }
+      },
+      "DoubanMovieData" : {
+        "type" : "object",
+        "properties" : {
+          "cardSubtitle" : {
+            "type" : "string"
+          },
+          "creationTimestamp" : {
+            "type" : "string",
+            "format" : "date-time"
+          },
+          "dataType" : {
+            "type" : "string"
+          },
+          "doubanId" : {
+            "type" : "string"
+          },
+          "favesCreateTime" : {
+            "type" : "string",
+            "format" : "date-time"
+          },
+          "favesRemark" : {
+            "type" : "string"
+          },
+          "favesScore" : {
+            "type" : "string"
+          },
+          "favesStatus" : {
+            "type" : "string"
+          },
+          "genres" : {
+            "uniqueItems" : true,
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          },
+          "id" : {
+            "type" : "string"
+          },
+          "link" : {
+            "type" : "string"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "poster" : {
+            "type" : "string"
+          },
+          "pubdate" : {
+            "type" : "string"
+          },
+          "score" : {
+            "type" : "string"
+          },
+          "type" : {
+            "type" : "string"
+          },
+          "year" : {
+            "type" : "string"
+          }
+        }
+      },
+      "DoubanMovieDataList" : {
+        "required" : [ "first", "hasNext", "hasPrevious", "items", "last", "page", "size", "total", "totalPages" ],
+        "type" : "object",
+        "properties" : {
+          "first" : {
+            "type" : "boolean",
+            "description" : "Indicates whether current page is the first page."
+          },
+          "hasNext" : {
+            "type" : "boolean",
+            "description" : "Indicates whether current page has previous page."
+          },
+          "hasPrevious" : {
+            "type" : "boolean",
+            "description" : "Indicates whether current page has previous page."
+          },
+          "items" : {
+            "type" : "array",
+            "description" : "A chunk of items.",
+            "items" : {
+              "$ref" : "#/components/schemas/DoubanMovieData"
+            }
+          },
+          "last" : {
+            "type" : "boolean",
+            "description" : "Indicates whether current page is the last page."
+          },
+          "page" : {
+            "type" : "integer",
+            "description" : "Page number, starts from 1. If not set or equal to 0, it means no pagination.",
+            "format" : "int32"
+          },
+          "size" : {
+            "type" : "integer",
+            "description" : "Size of each page. If not set or equal to 0, it means no pagination.",
+            "format" : "int32"
+          },
+          "total" : {
+            "type" : "integer",
+            "description" : "Total elements.",
+            "format" : "int64"
+          },
+          "totalPages" : {
+            "type" : "integer",
+            "description" : "Indicates total pages.",
+            "format" : "int64"
+          }
+        }
       },
       "DoubanMovieFaves" : {
         "type" : "object",
@@ -796,6 +1164,45 @@
           }
         }
       },
+      "DoubanMovieListResponse" : {
+        "type" : "object",
+        "properties" : {
+          "first" : {
+            "type" : "boolean"
+          },
+          "hasNext" : {
+            "type" : "boolean"
+          },
+          "hasPrevious" : {
+            "type" : "boolean"
+          },
+          "items" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/DoubanMovieData"
+            }
+          },
+          "last" : {
+            "type" : "boolean"
+          },
+          "page" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "size" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "total" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "totalPages" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }
+      },
       "DoubanMovieSpec" : {
         "type" : "object",
         "properties" : {
@@ -838,17 +1245,18 @@
           }
         }
       },
-      "DoubanMovieVo" : {
+      "DoubanTypeVo" : {
         "type" : "object",
         "properties" : {
-          "faves" : {
-            "$ref" : "#/components/schemas/DoubanMovieFaves"
+          "doubanCount" : {
+            "type" : "integer",
+            "format" : "int32"
           },
-          "metadata" : {
-            "$ref" : "#/components/schemas/Metadata"
+          "key" : {
+            "type" : "string"
           },
-          "spec" : {
-            "$ref" : "#/components/schemas/DoubanMovieSpec"
+          "name" : {
+            "type" : "string"
           }
         }
       },
