# src/main/java/la/moony/douban/controller/DoubanController.java
@@ -1,42 +1,0 @@
-package la.moony.douban.controller;
-
-
-import la.moony.douban.extension.DoubanMovie;
-import la.moony.douban.service.DoubanService;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-import reactor.core.publisher.Mono;
-import run.halo.app.extension.ReactiveExtensionClient;
-import run.halo.app.plugin.ApiVersion;
-
-@ApiVersion("v1alpha1")
-@RequestMapping("/douban")
-@RestController
-@Slf4j
-public class DoubanController {
-
-    private final DoubanService doubanService;
-
-    private final ReactiveExtensionClient client;
-
-    public DoubanController(DoubanService doubanService, ReactiveExtensionClient client) {
-        this.doubanService = doubanService;
-        this.client = client;
-    }
-
-    @PostMapping("/synchronizationDouban")
-    public void synchronizationDouban() {
-        doubanService.synchronizationDouban();
-    }
-
-
-    @DeleteMapping("/clear")
-    public Mono<Void> clearLogs() {
-        return client.list(DoubanMovie.class, null, null).flatMap(doubanMovie -> client.delete(doubanMovie))
-            .then();
-    }
-
-}
